manifests/route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: apiventasol
spec:
  to:
    kind: Service
    name: apiventasol
    weight: 100
  port:
    targetPort: 8080-tcp
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
